--- a/Aliento App/Presentation/Features/Sermons/Audio/AudioSermonsVC.xib
+++ b/Aliento App/Presentation/Features/Sermons/Audio/AudioSermonsVC.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SermonsViewController" customModule="Aliento_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AudioSermonsVC" customModule="Aliento_App" customModuleProvider="target">
             <connections>
                 <outlet property="floatinActionButton" destination="5mM-RA-EsW" id="uFa-4c-DdJ"/>
                 <outlet property="sermonsCollectionView" destination="1Bg-An-gsN" id="aXs-xG-aRJ"/>
@@ -21,7 +21,7 @@
             <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="1Bg-An-gsN" customClass="SermonsCollectionView" customModule="Aliento_App" customModuleProvider="target">
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="1Bg-An-gsN" customClass="AudioSermonsCollectionView" customModule="Aliento_App" customModuleProvider="target">
                     <rect key="frame" x="0.0" y="0.0" width="428" height="892"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="UX3-hf-k3z">
