--- a/Aliento App/Presentation/Features/Sermons/Video/VideoSermonsVC.xib
+++ b/Aliento App/Presentation/Features/Sermons/Video/VideoSermonsVC.xib
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoSermonsViewController" customModule="Aliento_App" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoSermonsVC" customModule="Aliento_App" customModuleProvider="target">
             <connections>
                 <outlet property="floatinActionButton" destination="59t-5h-iwJ" id="ZyN-b2-5gJ"/>
                 <outlet property="sermonsCollectionView" destination="Z2c-52-O7w" id="jhT-wV-6jh"/>
