--- a/Aliento App/Presentation/Features/Sermons/Video/CollectionView/VideoSermonItemCell.xib
+++ b/Aliento App/Presentation/Features/Sermons/Video/CollectionView/VideoSermonItemCell.xib
@@ -49,7 +49,7 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bfg-Uf-eic">
                                 <rect key="frame" x="16" y="141" width="32" height="43"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="20513" translatesAutoresizingMaskIntoConstraints="NO" id="wUa-eE-iJ5">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_logo_round" translatesAutoresizingMaskIntoConstraints="NO" id="wUa-eE-iJ5">
                                         <rect key="frame" x="0.0" y="0.0" width="32" height="43"/>
                                     </imageView>
                                 </subviews>
@@ -101,7 +101,7 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="20513" width="512" height="512"/>
+        <image name="ic_logo_round" width="144" height="144"/>
         <systemColor name="systemGray5Color">
             <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
