--- a/Aliento App/Presentation/Features/Sermons/Audio/AudioSermonsVC.xib
+++ b/Aliento App/Presentation/Features/Sermons/Audio/AudioSermonsVC.xib
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -34,18 +35,18 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5mM-RA-EsW">
                     <rect key="frame" x="334" y="798" width="70" height="70"/>
                     <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="768px-Spotify" translatesAutoresizingMaskIntoConstraints="NO" id="yVM-KQ-BaD">
-                            <rect key="frame" x="16" y="0.0" width="38" height="70"/>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_spotify" translatesAutoresizingMaskIntoConstraints="NO" id="yVM-KQ-BaD">
+                            <rect key="frame" x="4" y="0.0" width="62" height="70"/>
                         </imageView>
                     </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" name="green_spotify"/>
                     <color key="tintColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="70" id="DOJ-iy-TE3"/>
                         <constraint firstAttribute="width" secondItem="5mM-RA-EsW" secondAttribute="height" multiplier="1:1" id="OGT-VI-9kT"/>
-                        <constraint firstAttribute="trailing" secondItem="yVM-KQ-BaD" secondAttribute="trailing" constant="16" id="cSJ-ys-Hef"/>
+                        <constraint firstAttribute="trailing" secondItem="yVM-KQ-BaD" secondAttribute="trailing" constant="4" id="cSJ-ys-Hef"/>
                         <constraint firstItem="yVM-KQ-BaD" firstAttribute="top" secondItem="5mM-RA-EsW" secondAttribute="top" id="f8H-BP-R5I"/>
-                        <constraint firstItem="yVM-KQ-BaD" firstAttribute="leading" secondItem="5mM-RA-EsW" secondAttribute="leading" constant="16" id="oV9-ra-47j"/>
+                        <constraint firstItem="yVM-KQ-BaD" firstAttribute="leading" secondItem="5mM-RA-EsW" secondAttribute="leading" constant="4" id="oV9-ra-47j"/>
                         <constraint firstAttribute="bottom" secondItem="yVM-KQ-BaD" secondAttribute="bottom" id="tl4-sq-9XC"/>
                     </constraints>
                 </view>
@@ -64,7 +65,10 @@
         </view>
     </objects>
     <resources>
-        <image name="768px-Spotify" width="768" height="768"/>
+        <image name="ic_spotify" width="422" height="381"/>
+        <namedColor name="green_spotify">
+            <color red="0.11372549019607843" green="0.84313725490196079" blue="0.37647058823529411" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
